feat: feature complete

--- a/packages/orelings/beet.yaml
+++ b/packages/orelings/beet.yaml
@@ -13,9 +13,15 @@ resource_pack:
   load:
     - "."
 
+require:
+ - remove
+
 meta:
   common:
     namespace: "orelings"
     model_item: "minecraft:item/stone"
+
+  remove:
+   - mechanization
 
 extend: ../../beet-common.yaml
